# certificate-generator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  certificate_generator.py  config.py  main.py  names.csv  pdf_uploader.py  pyproject.toml  sample_template.csv  schema.py  start.sh  test_email.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
services/: email.py
static/css/: main.css
static/js/: main.js
templates/: index.html
