[project]
name = "certificate-generator"
version = "0.1.0"
description = "A customizable certificate generator that creates personalized certificates from CSV data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "flask>=3.1.2",
    "marshmallow>=4.2.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
]
